[package]
name = "lau-plato-integration"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-plato-integration"
description = "Rust library for plato integration in the PLATO ecosystem"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
